src/scss/themes/_product.scss
span.text-right.mr-2 {
    min-width: 90px;
    display: inline-block;
}

input[type="checkbox"]{
	min-height: auto;
}

.clone, .add-more-url{
	cursor: pointer;
}

.product-top-information{
	padding-left: 10px;
	padding-right: 10px;
	.p-info-box {
		font-weight: 12px;
	    p{
	    	display: flex;
	    	margin-bottom: 8px;
	    	&:last-child{
	    		margin-bottom: 0;
	    	}
	    }
	    .text-right{
	    	width: 90px;
	    }
	    span{
	    	vertical-align: top;
	    }
	}
	.col-lg-3{
		padding-left: 5px;
		padding-right: 5px;
	}
}

.product-information{
	padding-left: 10px;
	padding-right: 10px;
	position: relative;
	.p-info-box {
	    p{
	    	display: flex;
	    	&:last-child{
	    		margin-bottom: 0;
	    	}
	    }
	    .text-right{
	    	width: 90px;
	    }
	    span{
	    	vertical-align: top;
	    }
	}
	.col-lg-3{
		padding-left: 5px;
		padding-right: 5px;
	}
}

.product-information, .product-top-information{
	.product-img{
		small{
			position: absolute;
			right: 15px;
			top: 15px;
		}
	}
}

.product-information{
	.product-img{
		img{
			max-height: 130px;
			max-width: 130px;
		}
	}
}

table.variation-table{
	td{
		img{
			max-height: 75px;
			max-width: 75px;
		}
	}
}

.form-group.row.br-bottom {
    border-bottom: 1px solid #f8f8f8;
    padding-bottom: 1em;
}

.right-button{
	position: absolute;
	top: 0;
	right: 0;
	z-index: 9;
}

.product-table-wrapper{
	.table-responsive-lg{
	    border: 1px solid $gray;
	    border-radius: 25px;
	    overflow: hidden;
	}
	table{
		th{
			border-bottom: 1px solid #dee2e6 !important;
    		border-top: 0;
    		&.br-0{
    			border-bottom: 0 !important;
    		}
		}
	}
	.pagination{
		a{
			&.previous{
				border: 1px solid #1F2634;
			}
			&.next{
				border: 1px solid #1F2634;
			}
			&.active{
				border: 1px solid #1F2634;
			}
		}
	}
}

.border-box{
	height: 90%;
    .p-info-box{
	    font-size: 14px;
	    height: 100%;
		border: 1px solid $gray;
		border-radius: 25px;
		padding: 20px 10px;
		p span:last-child {
		    margin-left: 5px;
		}
    }
}

.variation-table{
	margin-bottom: 0.5rem !important;
	.column-1, tbody td:nth-child(1){
		width: 100px;
	}
	.column-2, tbody td:nth-child(2){
		width: 200px;
	}
	.column-3, tbody td:nth-child(3){
		width: 100px;
	}
	.column-4, tbody td:nth-child(4){
		width: 100px;
	}
	.column-5, tbody td:nth-child(5){
		width: 100px;
	}
	.column-6, tbody td:nth-child(6){
		width: 150px;
	}
	.column-7, tbody td:nth-child(7){
		width: 60px;
	}
	.column-8, tbody td:nth-child(8){
		width: 80px;
	}
	.column-9, tbody td:nth-child(9){
		width: 80px;
	}
	.column-10, tbody td:nth-child(10){
		width: 120px;
	}
	th{
		border-color: #ededed !important;
	}
}

.stock-qty-table{
	.column-1{
		width: 120px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 100px;
	}
	.column-4{
		width: 80px;
	}
	.column-5{
		width: 80px;
	}
	.column-6{
		width: 100px;
	}
	.column-7{
		width: 140px;
	}
}

.entry-history-table{
	.column-1{
		width: 120px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 80px;
	}
	.column-4{
		width: 80px;
	}
	.column-5{
		width: 100px;
	}
	.column-6{
		width: 100px;
	}
	.column-7{
		width: 80px;
	}
	.column-8{
		width: 100px;
	}
	.column-9{
		width: 140px;
	}
}

.sync-setting-table{
	.column-1{
		width: 100px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 300px;
	}
	.column-4{
		width: 150px;
	}
	.column-5{
		width: 150px;
	}
	.column-6{
		width: 100px;
	}
}

.original-product-table{
	.column-1{
		width: 80px;
	}
	.column-2{
		width: 100px;
	}
	.column-3{
		width: 80px;
	}
	.column-4{
		width: 100px;
	}
	.column-5{
		width: 100px;
	}
	.column-6{
		width: 120px;
	}
	.column-7{
		width: 80px;
	}
	.column-8{
		width: 140px;
	}
	.column-9{
		width: 120px;
	}
}

.modal{
	.product-details--modal-page{
		.btn-red{
			font-size: 12px;
		}
		.table th, .table td {
		    text-align: left !important;
		}
		th.column-1, td:first-child {
		    padding-left: 30px !important;
		}
		h6.card-title {
		    padding-left: 20px;
		}
		h3.mb-1.f-18.font-weight-normal.mb-3 {
		    padding-left: 20px;
		}
		.border-left {
		    padding-left: 20px !important;
		}
	}
	.variation-table .column-1, .variation-table tbody td:nth-child(1) {
	    text-align: center !important;
		padding-left: 0 !important;
	}
}

.product-image{
	img{
		max-height: 130px;
		max-width: 130px;
	}
}

.checkbox-sm{
	.custom-control-label::before, .custom-control-label::after {
		width: 16px;
		height: 16px;
	}
}

